--- a/juegodeguerra.html
+++ b/juegodeguerra.html
@@ -78,7 +78,7 @@
   <!-- Scripts para el modo juego de guerra -->
   <script src="/Client/js/hexgrid.js"></script>
   <script src="/Client/js/miradial.js"></script>
-  <script src="/Client/js/unidades.js"></script> 
+  <script src="/Client/js/gestorUnidades.js"></script> 
 
   <!-- Dependencias -->
   <script src="/Client/js/eventemitter.js"></script>
