--- a/index.html
+++ b/index.html
@@ -11,6 +11,7 @@
 <link rel="manifest" href="/Client/image/favicon_logoai/site.webmanifest">
 <link rel="shortcut icon" href="/Client/image/favicon_logoai/favicon.ico">
 <link rel="stylesheet" href="Client/css/style.css">
+<link rel="stylesheet" href="Client/css/carrusel.css">
 <script src="https://kit.fontawesome.com/707f71e5d4.js" crossorigin="anonymous"></script>
 <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.5.1/jquery.min.js"></script>
 <script src="/Client/js/nerworkConfig.js"></script>
@@ -65,5 +66,6 @@
         </div>
     </main>
     <script src="/Client/js/validacion.js"></script>
+    <script src="/Client/js/carrusel.js"></script>
 </body>
 </html>
