--- a/juegodeguerra.html
+++ b/juegodeguerra.html
@@ -180,6 +180,7 @@
         <a href="#" id="btnMedirDistancia"><i class="fas fa-ruler-combined"></i> Medir Distancia</a>
         <a href="#" id="PerfilElevacionBtn"><i class="fas fa-chart-line"></i> Perfil de Elevación</a>
         <a href="#" id="btnCalculoMarcha" ><i class="fas fa-route"></i>Cálculo de Marcha</a>
+        <a href="#" id="btnControlGestos"><i class="fas fa-hand-paper"></i> Control por Gestos</a>
       </div>
     </div>
     <div class="menu-btn">
@@ -956,7 +957,7 @@
           <!-- El gráfico D3 se insertará aquí -->
       </div>
     </div>
-
+    
     <!-- Panel Cálculo de Marcha -->
     <div id="calculoMarchaPanel" class="sub-panel" style="display: none;">
       <div class="display-header">
