mejoras en simbolos y edicion de lineas y poligonos

--- a/CO.html
+++ b/CO.html
@@ -446,10 +446,15 @@
                         <a href="#" onclick="dibujarElemento('linea', 'GFGPOLC---')">Línea de Contacto (tropas amigas)</a>
                         <a href="#" onclick="dibujarElemento('linea', 'LCFin')">Línea de Coordinación Final</a>
                         <a href="#" onclick="dibujarElemento('linea', 'LPAtq')">Línea de Partida para el Ataque</a>
-                        <a href="#" onclick="agregarMarcador(this.dataset.sidc, 'Punto de Desdoblemiento')" data-sidc="GFGPOPP---"><span class="mil-symbol"></span>Punto de Desdoblemiento</a>
-                        <a href="#" onclick="agregarMarcador(this.dataset.sidc, 'Punto de Desdoblemiento')" data-sidc="GFGPGPPP--"><span class="mil-symbol"></span>Punto de Pasage</a>
                         <a href="#" onclick="agregarMarcador(this.dataset.sidc, 'Bloqueo')" data-sidc="GFMPOGB---"><span class="mil-symbol"></span>Bloqueo</a>
-                        
+                        <a href="#" onclick="agregarPuntoControl('PC')"> Punto de Control (PC)</a>
+                        <a href="#" onclick="agregarPuntoControl('PI')"> Punto Inicial (PI)</a>
+                        <a href="#" onclick="agregarPuntoControl('PT')"> Punto Terminal (PT)</a>
+                        <a href="#" onclick="agregarPuntoControl('PD')"> Punto de Desdoblamiento (PD)</a>
+                        <a href="#" onclick="agregarPuntoControl('PE')"> Punto de Encolumnamiento (PE)</a>
+                        <a href="#" onclick="agregarPuntoControl('PP')"> Punto de Pasaje (PP)</a>
+
+
                       </div>
                   </div>
                   <div class="menu-btn">
