--- a/juegodeguerra.html
+++ b/juegodeguerra.html
@@ -614,6 +614,13 @@
         <a href="#" onclick="dibujarElemento('linea', 'G*G*OLC---****X')">Línea de Contacto (tropas amigas atacan)</a>
         <a href="#" onclick="dibujarElemento('linea', 'LCFin')">Línea de Coordinación Final</a>
         <a href="#" onclick="dibujarElemento('linea', 'LPAtq')">Línea de Partida para el Ataque</a>
+        <a href="#" onclick="agregarPuntoControl('PC')"> Punto de Control (PC)</a>
+        <a href="#" onclick="agregarPuntoControl('PI')">Punto Inicial (PI)</a>
+        <a href="#" onclick="agregarPuntoControl('PT')">Punto Terminal (PT)</a>
+        <a href="#" onclick="agregarPuntoControl('PD')"> Punto de Desdoblamiento (PD)</a>
+        <a href="#" onclick="agregarPuntoControl('PE')"> Punto de Encolumnamiento (PE)</a>
+        <a href="#" onclick="agregarPuntoControl('PP')"> Punto de Pasaje (PP)</a>
+
     </div>
   </div>
 
