--- a/gestionbatalla.html
+++ b/gestionbatalla.html
@@ -75,8 +75,12 @@
   <script src="/Client/js/indexP.js"></script>
   <script src="/Client/js/miradial.js"></script>
 
-  <!-- Script específico para gestión de batalla -->
-  <script src="/Client/js/gestionBatalla.js"></script>
+  <!-- Scripts modularizados para gestión de batalla -->
+  <script src="/Client/js/utilsGB.js"></script>
+  <script src="/Client/js/elementosGB.js"></script>
+  <script src="/Client/js/chatGB.js"></script>
+  <script src="/Client/js/informesGB.js"></script>
+  <script src="/Client/js/GB.js"></script>
 </head>
 <body>
   
