--- a/gestionbatalla.html
+++ b/gestionbatalla.html
@@ -76,6 +76,7 @@
   <script src="/Client/js/miradial.js"></script>
 
   <!-- Scripts modularizados para gestión de batalla -->
+  <script src="/Client/js/UserIdentity.js"></script>
   <script src="/Client/js/utilsGB.js"></script>
   <script src="/Client/js/edicionGB.js"></script>
   <script src="/Client/js/elementosGB.js"></script>
@@ -714,7 +715,9 @@
         <button id="cerrarMedicion">X</button>
       </div>
 
-
+      <button id="btn-salir-operacion" class="btn btn-danger">
+        <i class="fas fa-sign-out-alt"></i> Salir de Operación
+      </button>
 
 
       <div id="perfilElevacionDisplay" class="sub-panel" style="display: none;">
