--- a/gestionbatalla.html
+++ b/gestionbatalla.html
@@ -56,6 +56,7 @@
   <script src="/Client/Libs/Leaflet.pattern-master/dist/leaflet.pattern.js"></script>
 
   <!-- Scripts personalizados -->
+  <script src="/getServerUrl.js"></script>
   <script src="/Client/js/elevation.worker.js"></script>
   <script src="/Client/js/elevationHandler.js"></script>
   <script src="/Client/js/vegetacionhandler.js"></script>
@@ -76,6 +77,7 @@
   <script src="/Client/js/miradial.js"></script>
 
   <!-- Scripts modularizados para gestión de batalla -->
+  <script src="/Client/js/sessionManager.js"></script>
   <script src="/Client/js/UserIdentity.js"></script>
   <script src="/Client/js/utilsGB.js"></script>
   <script src="/Client/js/edicionGB.js"></script>
@@ -83,6 +85,7 @@
   <script src="/Client/js/chatGB.js"></script>
   <script src="/Client/js/informesGB.js"></script>
   <script src="/Client/js/GB.js"></script>
+  
 </head>
 <body>
   
