--- a/gestionbatalla.html
+++ b/gestionbatalla.html
@@ -79,6 +79,7 @@
   <!-- Scripts modularizados para gestión de batalla -->
   <script src="/Client/js/sessionManager.js"></script>
   <script src="/Client/js/UserIdentity.js"></script>
+  <script src="/Client/js/comunicacionGB.js"></script>
   <script src="/Client/js/utilsGB.js"></script>
   <script src="/Client/js/edicionGB.js"></script>
   <script src="/Client/js/elementosGB.js"></script>
