💾 MYSQL: Configuración para deployment con base de datos MySQL
🔧 Cambios realizados:
- render.yaml: Configuración MySQL externa
- app.py: Servidor adaptado para PyMySQL
- requirements.txt: Dependencias MySQL optimizadas
- DEPLOYMENT.md: Guía completa MySQL + Render

🗄️ Base de datos:
- Soporte para MySQL 8.0
- Configuración via variables de entorno
- Health checks incluidos
- Conexiones PyMySQL optimizadas

🌐 Proveedores MySQL gratuitos:
- PlanetScale (1GB gratis)
- Railway MySQL (500h/mes)
- Clever Cloud (256MB gratis)
- FreeSQLDatabase (5MB testing)

🚀 Listo para deployment en Render + MySQL externa

--- a/index.html
+++ b/index.html
@@ -14,6 +14,7 @@
     <script src="https://kit.fontawesome.com/707f71e5d4.js" crossorigin="anonymous"></script>
     <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.5.1/jquery.min.js"></script>
     <script src="/Client/js/networkConfig.js"></script>
+    <script src="/Client/js/config.js"></script>
 </head>
 <body>
     <div class="container">
