🚨 FIX CRÍTICO: Mapas de Planeamiento y demás modos corregidos
- Reemplazadas todas las referencias /node_modules/ por CDNs públicos
- planeamiento.html: Leaflet y plugins ahora desde unpkg/cdnjs
- gestionbatalla.html: Misma corrección para modo GB
- juegodeguerra.html: Mapas funcionando con CDNs
- CO.html + inicioGB.html: MilSymbol desde unpkg
- Test integral agregado para verificación continua

SOLUCIONA: Planeamiento no cargaba por dependencias faltantes
AFECTABA: Todos los modos con mapas (Planeamiento, GB, Juego Guerra)

--- a/CO.html
+++ b/CO.html
@@ -24,7 +24,7 @@
     <script src="https://cdnjs.cloudflare.com/ajax/libs/html2canvas/1.4.1/html2canvas.min.js"></script>
     
     <!-- Military Symbol Libraries -->
-    <script src="/node_modules/milsymbol/dist/milsymbol.js"></script>
+    <script src="https://unpkg.com/milsymbol@2.1.1/dist/milsymbol.js"></script>
     <script src="https://cdnjs.cloudflare.com/ajax/libs/jsPlumb/2.15.6/js/jsplumb.min.js"></script>
     
     <!-- ✅ ORDEN CORRECTO DE SCRIPTS CO -->
