--- a/gestionbatalla.html
+++ b/gestionbatalla.html
@@ -11,14 +11,14 @@
   <meta name="viewport" content="width=device-width, initial-scale=1.0, maximum-scale=1.0, user-scalable=no">
   
   <!-- Estilos CSS -->
-  <link rel="stylesheet" href="/node_modules/leaflet/dist/leaflet.css" />
-  <link rel="stylesheet" href="/node_modules/leaflet-draw/dist/leaflet.draw.css" />
-  <link rel="stylesheet" href="/node_modules/leaflet-control-geocoder/dist/Control.Geocoder.css" />
-  <link rel="stylesheet" href="/node_modules/@raruto/leaflet-elevation/dist/leaflet-elevation.css" />
-  <link rel="stylesheet" href="/node_modules/leaflet-fullscreen/dist/leaflet.fullscreen.css" />
-  <link rel="stylesheet" href="/node_modules/leaflet-sidebar-v2/css/leaflet-sidebar.min.css" />
-  <link rel="stylesheet" href="/node_modules/leaflet-measure/dist/leaflet-measure.css" />
-  <link rel="stylesheet" href="/node_modules/leaflet-easybutton/src/easy-button.css" />
+  <link rel="stylesheet" href="https://unpkg.com/leaflet@1.9.4/dist/leaflet.css" />
+  <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/leaflet.draw/1.0.4/leaflet.draw.css" />
+  <link rel="stylesheet" href="https://unpkg.com/leaflet-control-geocoder/dist/Control.Geocoder.css" />
+  <link rel="stylesheet" href="https://unpkg.com/@raruto/leaflet-elevation/dist/leaflet-elevation.css" />
+  <link rel="stylesheet" href="https://unpkg.com/leaflet-fullscreen/dist/leaflet.fullscreen.css" />
+  <link rel="stylesheet" href="https://unpkg.com/leaflet-sidebar-v2/css/leaflet-sidebar.min.css" />
+  <link rel="stylesheet" href="https://unpkg.com/leaflet-measure/dist/leaflet-measure.css" />
+  <link rel="stylesheet" href="https://unpkg.com/leaflet-easybutton/src/easy-button.css" />
   <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/5.15.4/css/all.min.css">
   <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.5.2/css/bootstrap.min.css">
   <link rel="stylesheet" href="/Client/css/planeamiento.css">
@@ -31,28 +31,28 @@
   <script src="https://cdnjs.cloudflare.com/ajax/libs/jspdf/2.5.1/jspdf.umd.min.js"></script>
   <script src="https://cdnjs.cloudflare.com/ajax/libs/html2canvas/1.4.1/html2canvas.min.js"></script>
   
-  <script src="/node_modules/leaflet/dist/leaflet.js"></script>
-  <script src="/node_modules/milsymbol/dist/milsymbol.js"></script>
-  <script src="/node_modules/d3/dist/d3.min.js"></script>
-  <script src="/node_modules/@raruto/leaflet-elevation/dist/leaflet-elevation.min.js"></script>
-  <script src="/node_modules/leaflet-draw/dist/leaflet.draw.js"></script>
-  <script src="/node_modules/leaflet-geometryutil/src/leaflet.geometryutil.js"></script>
-  <script src="/node_modules/leaflet-geosearch/dist/bundle.min.js"></script>
-  <script src="/node_modules/geotiff/dist-browser/geotiff.js"></script>
-  <script src="/node_modules/leaflet-control-geocoder/dist/Control.Geocoder.min.js"></script>
-  <script src="/node_modules/proj4/dist/proj4.js"></script>
-  <script src="/node_modules/leaflet-utfgrid/L.UTFGrid.js"></script>
-  <script src="/node_modules/mgrs/dist/mgrs.js"></script>
-  <script src="/node_modules/leaflet.gridlayer.googlemutant/dist/Leaflet.GoogleMutant.js"></script>
-  <script src="/node_modules/leaflet.markercluster/dist/leaflet.markercluster.js"></script>
-  <script src="/node_modules/leaflet-measure/dist/leaflet-measure.js"></script>
-  <script src="/node_modules/leaflet-easybutton/src/easy-button.js"></script>
-  <script src="/node_modules/leaflet-fullscreen/dist/Leaflet.fullscreen.min.js"></script>
-  <script src="/node_modules/leaflet-bing-layer/leaflet-bing-layer.min.js"></script>
-  <script src="/node_modules/leaflet-polylinedecorator/dist/leaflet.polylineDecorator.js"></script>
-  <script src="/node_modules/leaflet-sidebar-v2/js/leaflet-sidebar.min.js"></script>
-  <script src="/node_modules/leaflet-search/dist/leaflet-search.src.js"></script>
-  <script src="/node_modules/file-saver/dist/FileSaver.js"></script>
+  <script src="https://unpkg.com/leaflet@1.9.4/dist/leaflet.js"></script>
+  <script src="https://unpkg.com/milsymbol@2.1.1/dist/milsymbol.js"></script>
+  <script src="https://d3js.org/d3.v7.min.js"></script>
+  <script src="https://unpkg.com/@raruto/leaflet-elevation/dist/leaflet-elevation.min.js"></script>
+  <script src="https://cdnjs.cloudflare.com/ajax/libs/leaflet.draw/1.0.4/leaflet.draw.js"></script>
+  <script src="https://unpkg.com/leaflet-geometryutil/src/leaflet.geometryutil.js"></script>
+  <script src="https://unpkg.com/leaflet-geosearch/dist/bundle.min.js"></script>
+  <script src="https://unpkg.com/geotiff/dist-browser/geotiff.js"></script>
+  <script src="https://unpkg.com/leaflet-control-geocoder/dist/Control.Geocoder.min.js"></script>
+  <script src="https://unpkg.com/proj4@2.8.1/dist/proj4.js"></script>
+  <script src="https://unpkg.com/leaflet-utfgrid/L.UTFGrid.js"></script>
+  <script src="https://unpkg.com/mgrs@1.0.0/mgrs.js"></script>
+  <script src="https://unpkg.com/leaflet.gridlayer.googlemutant/dist/Leaflet.GoogleMutant.js"></script>
+  <script src="https://unpkg.com/leaflet.markercluster/dist/leaflet.markercluster.js"></script>
+  <script src="https://unpkg.com/leaflet-measure/dist/leaflet-measure.js"></script>
+  <script src="https://unpkg.com/leaflet-easybutton/src/easy-button.js"></script>
+  <script src="https://unpkg.com/leaflet-fullscreen/dist/Leaflet.fullscreen.min.js"></script>
+  <script src="https://unpkg.com/leaflet-bing-layer/leaflet-bing-layer.min.js"></script>
+  <script src="https://unpkg.com/leaflet-polylinedecorator/dist/leaflet.polylineDecorator.js"></script>
+  <script src="https://unpkg.com/leaflet-sidebar-v2/js/leaflet-sidebar.min.js"></script>
+  <script src="https://unpkg.com/leaflet-search/dist/leaflet-search.src.js"></script>
+  <script src="https://unpkg.com/file-saver/dist/FileSaver.js"></script>
   <script src="/Client/Libs/Leaflet.pattern-master/dist/leaflet.pattern.js"></script>
 
   <!-- Scripts personalizados -->
