🧪 SISTEMA DE TESTS COMPLETO: UI automática + correcciones específicas
NUEVOS ARCHIVOS:
- test_automatico_ui.html: Test completo de interfaz para todos los módulos
- correccion_dependencias.js: Auto-corrección de milsymbol y Geocoder
- test_correcciones_especificas.js: Test específico para errores detectados

MEJORAS EN PLANEAMIENTO:
- Integración de scripts de corrección automática
- Auto-detección y carga de dependencias faltantes
- Test específico para milsymbol y Geocoder

FUNCIONALIDADES:
✅ Test automático de todos los módulos con simulación de usuario
✅ Corrección automática de dependencias faltantes
✅ Reporte visual de estado con progreso en tiempo real
✅ Exportación de resultados para análisis
✅ Auto-corrección de errores específicos detectados

SOLUCIONA: Los 2 errores en Planeamiento (milsymbol + Geocoder)

--- a/planeamiento.html
+++ b/planeamiento.html
@@ -24,6 +24,10 @@
   <link rel="stylesheet" href="/Client/css/CYGMarcha.css">
   
   <script src="/Client/js/networkConfig.js"></script>
+  <!-- Script de corrección de dependencias -->
+  <script src="/correccion_dependencias.js"></script>
+  <!-- Test específico de correcciones -->
+  <script src="/test_correcciones_especificas.js"></script>
   <!-- Scripts JavaScript -->
   <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.5.1/jquery.min.js"></script>
   <script src="https://stackpath.bootstrapcdn.com/bootstrap/4.5.2/js/bootstrap.min.js"></script>
