--- a/juegodeguerra.html
+++ b/juegodeguerra.html
@@ -54,11 +54,14 @@
   <script src="https://unpkg.com/file-saver/dist/FileSaver.js"></script>
   <script src="/Client/Libs/Leaflet.pattern-master/dist/leaflet.pattern.js"></script>
 
+  <!-- Scripts de emergencia para errores 502 -->
+  <script src="/correcciones_servidor_502.js"></script>
+  
   <!-- Scripts personalizados -->
-  <script src="/Client/js/networkConfig.js"></script>
-  <script src="/Client/js/elevation.worker.js"></script>
-  <script src="/Client/js/elevationHandler.js"></script>
-  <script src="/Client/js/vegetacionhandler.js"></script>
+  <script src="/Client/js/networkConfig.js" onerror="console.warn('❌ networkConfig.js falló - usando emergencia')"></script>
+  <script src="/Client/js/elevation.worker.js" onerror="console.warn('❌ elevation.worker.js falló')"></script>
+  <script src="/Client/js/elevationHandler.js" onerror="console.warn('❌ elevationHandler.js falló - usando emergencia')"></script>
+  <script src="/Client/js/vegetacionhandler.js" onerror="console.warn('❌ vegetacionhandler.js falló - usando emergencia')"></script>
   <script src="/Client/js/mapaP.js"></script>
   <script src="/Client/js/calcosP.js"></script>
   <script src="/Client/js/edicioncompleto.js"></script>
