🚀 ACTIVACIÓN GITHUB RELEASES: Sistema integrado en MAIRA
✅ Implementado:
- Test completo GitHub Releases (test_github_releases.html)
- Scripts integrados en planeamiento.html y juegodeguerra.html
- Sistema automático de detección y configuración
- Fallback entre CDN JSDelivr y GitHub directo
- Archivos comprimidos listos para tiles (1.3GB)

🌐 Funcionalidades:
- Detección automática de CDN disponible
- Switching dinámico entre proveedores
- Cache inteligente con diagnóstico
- URLs de test para verificación
- Panel de control integrado

--- a/juegodeguerra.html
+++ b/juegodeguerra.html
@@ -100,6 +100,11 @@
 
  <!-- 5. GestorJuego al final ya que coordina todos los demás -->
  <script src="/Client/js/gestorJuego.js"></script>
+ 
+ <!-- Scripts de tiles externos y GitHub Releases -->
+ <script src="external_tiles_adapter.js"></script>
+ <script src="github_releases_config.js"></script>
+ <script src="temporary_tiles_solution.js"></script>
 </head>
 <body>
   <!-- Loading container al principio del body -->
