--- a/planeamiento.html
+++ b/planeamiento.html
@@ -80,6 +80,11 @@
   <script src="/Client/js/Test/autoTest.js"></script>
   <script src="/Client/js/Test/visualizadorTests.js"></script>
   
+  <!-- Scripts de tiles externos y GitHub Releases -->
+  <script src="external_tiles_adapter.js"></script>
+  <script src="github_releases_config.js"></script>
+  <script src="temporary_tiles_solution.js"></script>
+  
 
 </head>
 
