--- a/static/planeamiento.html
+++ b/static/planeamiento.html
@@ -13,7 +13,7 @@
   <link rel="stylesheet" href="/node_modules/leaflet/dist/leaflet.css" />
   <link rel="stylesheet" href="/node_modules/leaflet-draw/dist/leaflet.draw.css" />
   <link rel="stylesheet" href="/node_modules/leaflet-control-geocoder/dist/Control.Geocoder.css" />
-  <link rel="stylesheet" href="https://unpkg.com/@raruto/leaflet-elevation/dist/leaflet-elevation.css" />
+  <link rel="stylesheet" href="/node_modules/@raruto/leaflet-elevation/dist/leaflet-elevation.css" />
   <link rel="stylesheet" href="/node_modules/leaflet-fullscreen/dist/leaflet.fullscreen.css" />
   <link rel="stylesheet" href="/node_modules/leaflet-sidebar-v2/css/leaflet-sidebar.min.css" />
   <link rel="stylesheet" href="/node_modules/leaflet-measure/dist/leaflet-measure.css" />
@@ -37,24 +37,24 @@
   <script src="/node_modules/leaflet/dist/leaflet.js"></script>
   <script src="/node_modules/milsymbol/dist/milsymbol.js"></script>
   <script src="/node_modules/d3/dist/d3.min.js"></script>
-  <script src="https://unpkg.com/@raruto/leaflet-elevation/dist/leaflet-elevation.min.js"></script>
+  <script src="/node_modules/@raruto/leaflet-elevation/dist/leaflet-elevation.min.js"></script>
   <script src="/node_modules/leaflet-draw/dist/leaflet.draw.js"></script>
   <script src="/node_modules/leaflet-geometryutil/src/leaflet.geometryutil.js"></script>
   <script src="/node_modules/leaflet-geosearch/dist/bundle.min.js"></script>
   <script src="/node_modules/geotiff/dist-browser/geotiff.js"></script>
   <script src="/node_modules/leaflet-control-geocoder/dist/Control.Geocoder.min.js"></script>
   <script src="/node_modules/proj4/dist/proj4.js"></script>
-  <script src="https://unpkg.com/leaflet-utfgrid/L.UTFGrid.js"></script>
+  <script src="/node_modules/leaflet-utfgrid/dist/leaflet.utfgrid.js"></script>
   <script src="/node_modules/mgrs/mgrs.js"></script>
-  <script src="https://unpkg.com/leaflet.gridlayer.googlemutant/dist/Leaflet.GoogleMutant.js"></script>
+  <script src="/node_modules/leaflet.gridlayer.googlemutant/dist/Leaflet.GoogleMutant.js"></script>
   <script src="/node_modules/leaflet.markercluster/dist/leaflet.markercluster.js"></script>
   <script src="/node_modules/leaflet-measure/dist/leaflet-measure.js"></script>
   <script src="/node_modules/leaflet-easybutton/src/easy-button.js"></script>
   <script src="/node_modules/leaflet-fullscreen/dist/Leaflet.fullscreen.min.js"></script>
-  <script src="https://unpkg.com/leaflet-bing-layer/leaflet-bing-layer.min.js"></script>
-  <script src="https://unpkg.com/leaflet-polylinedecorator/dist/leaflet.polylineDecorator.js"></script>
+  <script src="/node_modules/leaflet-bing-layer/leaflet-bing-layer.min.js"></script>
+  <script src="/node_modules/leaflet-polylinedecorator/dist/leaflet.polylineDecorator.js"></script>
   <script src="/node_modules/leaflet-sidebar-v2/js/leaflet-sidebar.min.js"></script>
-  <script src="https://unpkg.com/leaflet-search/dist/leaflet-search.src.js"></script>
+  <script src="/node_modules/leaflet-search/dist/leaflet-search.src.js"></script>
   <script src="/node_modules/file-saver/dist/FileSaver.js"></script>
   <script src="/Client/Libs/Leaflet.pattern-master/dist/leaflet.pattern.js"></script>
 
@@ -80,10 +80,10 @@
   <script src="/Client/js/Test/autoTest.js"></script>
   <script src="/Client/js/Test/visualizadorTests.js"></script>
   
-  <!-- Scripts de tiles externos y GitHub Releases -->
+  <!-- Scripts de tiles optimizados -->
   <script src="external_tiles_adapter.js"></script>
   <script src="github_releases_config.js"></script>
-  <script src="temporary_tiles_solution.js"></script>
+  <script src="optimized_tiles_system.js"></script>
   
 
 </head>
