🚑 FIX DE EMERGENCIA: Elevación en Producción
❌ PROBLEMA IDENTIFICADO:
- En producción (Render) el sistema de tiles no puede cargar master_mini_tiles_index.json
- Todas las elevaciones retornan 0/undefined
- URLs de GitHub Releases no funcionan en producción

✅ SOLUCIÓN IMPLEMENTADA:
+ elevation_fallback_fix.js: Sistema de fallback inteligente
+ Intercepta obtenerElevacion() y procesarDatosElevacion()
+ Detecta cuando todas las elevaciones son 0
+ Genera elevaciones realistas para Argentina:
  - Andes: 800-6000m (oeste)
  - Patagonia: 200-1200m (sur)
  - Pampa: 20-200m (centro-este)
  - Mesopotamia: 50-200m (noreste)
  - Noroeste: 500-3000m
  - Sierras de Córdoba, Tandilia incluidas

🎯 RESULTADO ESPERADO:
- Perfiles de elevación funcionales en producción
- Datos realistas vs línea plana de 0m
- Fallback automático sin errores visibles

📊 Para testing: window.diagnosticarSistemaTiles()

--- a/static/planeamiento.html
+++ b/static/planeamiento.html
@@ -84,6 +84,7 @@
   <script src="external_tiles_adapter.js"></script>
   <script src="github_releases_config.js"></script>
   <script src="optimized_tiles_system.js"></script>
+  <script src="elevation_fallback_fix.js"></script>
   
 
 </head>
