🔧 Fix: Resuelve problema de redirección en partidas LAN
- Agrega fix_partidas_lan.js con lógica de retry y persistencia
- Actualiza partidas.js con mejor manejo de eventos partidaCreada
- Integra patch en iniciarpartida.html
- Corrige package.json eliminando dependencias duplicadas
- Documenta solución completa en FIX_PARTIDAS_LAN.md

Soluciona: Partidas LAN no llegaban a sala de espera por timing DOM

--- a/static/iniciarpartida.html
+++ b/static/iniciarpartida.html
@@ -18,6 +18,8 @@
     <script src="/Client/js/MAIRAChat.js"></script>
     <script src="/Client/js/partidas.js"></script>
     <script src="/Client/js/iniciarpartida.js"></script>
+    <!-- Parche para resolver problemas de partidas LAN -->
+    <script src="/fix_partidas_lan.js"></script>
 </head>
 
 <body>
