🔧 FIX: Correción carga librerías - milsymbol y leaflet.pattern
✅ Cambios aplicados:
- CO.html: milsymbol de CDN → /node_modules/milsymbol/dist/milsymbol.js
- juegodeguerra.html: milsymbol de CDN → /node_modules/
- inicioGB.html: milsymbol de CDN → /node_modules/
- gestionbatalla.html: milsymbol de CDN → /node_modules/
- CO.html: Agregado leaflet.pattern desde /Client/Libs/
- Creado test_libs_loading.html para verificación

🎯 Objetivo: Consistencia con planeamiento.html (que ya funcionaba)
📚 Librerías: milsymbol v2.2.0 + leaflet.pattern locales
🐍 detectorGestos.py: Sin cambios (funciona independientemente)

--- a/static/gestionbatalla.html
+++ b/static/gestionbatalla.html
@@ -32,7 +32,7 @@
   <script src="https://cdnjs.cloudflare.com/ajax/libs/html2canvas/1.4.1/html2canvas.min.js"></script>
   
   <script src="https://unpkg.com/leaflet@1.9.4/dist/leaflet.js"></script>
-  <script src="https://unpkg.com/milsymbol@2.1.1/dist/milsymbol.js"></script>
+  <script src="/node_modules/milsymbol/dist/milsymbol.js"></script>
   <script src="https://d3js.org/d3.v7.min.js"></script>
   <script src="https://unpkg.com/@raruto/leaflet-elevation/dist/leaflet-elevation.min.js"></script>
   <script src="https://cdnjs.cloudflare.com/ajax/libs/leaflet.draw/1.0.4/leaflet.draw.js"></script>
