--- a/static/juegodeguerra.html
+++ b/static/juegodeguerra.html
@@ -27,13 +27,13 @@
   <!-- Scripts JavaScript -->
   <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.5.1/jquery.min.js"></script>
   <script src="https://stackpath.bootstrapcdn.com/bootstrap/4.5.2/js/bootstrap.min.js"></script>
-  <script src="https://cdnjs.cloudflare.com/ajax/libs/jspdf/2.5.1/jspdf.umd.min.js"></script>
-  <script src="https://cdnjs.cloudflare.com/ajax/libs/html2canvas/1.4.1/html2canvas.min.js"></script>
+  <script src="/node_modules/jspdf/dist/jspdf.umd.min.js"></script>
+  <script src="/node_modules/html2canvas/dist/html2canvas.min.js"></script>
   
-  <script src="https://unpkg.com/leaflet@1.9.4/dist/leaflet.js"></script>
-  <script src="https://unpkg.com/milsymbol@2.1.1/dist/milsymbol.js"></script>
-  <script src="https://d3js.org/d3.v7.min.js"></script>
-  <script src="https://unpkg.com/@raruto/leaflet-elevation/dist/leaflet-elevation.min.js"></script>
+  <script src="/node_modules/leaflet/dist/leaflet.js"></script>
+  <script src="/node_modules/milsymbol/dist/milsymbol.js"></script>
+  <script src="/node_modules/d3/dist/d3.min.js"></script>
+  <script src="/node_modules/@raruto/leaflet-elevation/dist/leaflet-elevation.min.js"></script>
   <script src="https://cdnjs.cloudflare.com/ajax/libs/leaflet.draw/1.0.4/leaflet.draw.js"></script>
   <script src="https://unpkg.com/leaflet-geometryutil/src/leaflet.geometryutil.js"></script>
   <script src="https://unpkg.com/leaflet-geosearch/dist/bundle.min.js"></script>
