--- a/static/inicioGB.html
+++ b/static/inicioGB.html
@@ -13,7 +13,7 @@
     <link rel="stylesheet" href="/Client/css/inicioGB.css">
     <script src="/Client/js/networkConfig.js"></script>
     <script src="https://cdn.socket.io/4.5.0/socket.io.min.js"></script>
-    <script src="https://unpkg.com/milsymbol@2.1.1/dist/milsymbol.js"></script>
+    <script src="/node_modules/milsymbol/dist/milsymbol.js"></script>
     <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.5.1/jquery.min.js"></script>
     <script src="https://stackpath.bootstrapcdn.com/bootstrap/4.5.2/js/bootstrap.min.js"></script>
     <script src="/Client/js/MAIRAChat.js"></script>
