--- a/static/planeamiento.html
+++ b/static/planeamiento.html
@@ -80,12 +80,7 @@
   <script src="/Client/js/Test/autoTest.js"></script>
   <script src="/Client/js/Test/visualizadorTests.js"></script>
   
-  <!-- Scripts de tiles optimizados -->
-  <script src="external_tiles_adapter.js"></script>
-  <script src="github_releases_config.js"></script>
-  <script src="optimized_tiles_system.js"></script>
-  <script src="elevation_fallback_fix.js"></script>
-  
+  <!-- El elevationHandler.js ya maneja todos los tiles -->
 
 </head>
 
