--- a/static/gestionbatalla.html
+++ b/static/gestionbatalla.html
@@ -6,7 +6,7 @@
   <link rel="icon" type="image/png" sizes="32x32" href="/Client/image/favicon_logoai/favicon-32x32.png">
   <link rel="icon" type="image/png" sizes="16x16" href="/Client/image/favicon_logoai/favicon-16x16.png">
   <link rel="manifest" href="/Client/image/favicon_logoai/site.webmanifest">
-  <script src="https://cdn.socket.io/4.5.0/socket.io.min.js"></script>
+  <script src="/node_modules/socket.io/client-dist/socket.io.min.js"></script>
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0, maximum-scale=1.0, user-scalable=no">
   
