--- a/static/juegodeguerra.html
+++ b/static/juegodeguerra.html
@@ -101,7 +101,10 @@
  <!-- 5. GestorJuego al final ya que coordina todos los demás -->
  <script src="/Client/js/gestorJuego.js"></script>
  
- <!-- El elevationHandler.js ya maneja todos los tiles -->
+ <!-- Scripts de tiles externos y GitHub Releases -->
+ <script src="external_tiles_adapter.js"></script>
+ <script src="github_releases_config.js"></script>
+ <script src="temporary_tiles_solution.js"></script>
 </head>
 <body>
   <!-- Loading container al principio del body -->
