--- a/static/planeamiento.html
+++ b/static/planeamiento.html
@@ -25,9 +25,9 @@
   
   <script src="/Client/js/networkConfig.js"></script>
   <!-- Script de corrección de dependencias -->
-  <script src="/dev-tools/correccion_dependencias.js"></script>
+  <script src="/correccion_dependencias.js"></script>
   <!-- Test específico de correcciones -->
-  <script src="/dev-tools/test_correcciones_especificas.js"></script>
+  <script src="/test_correcciones_especificas.js"></script>
   <!-- Scripts JavaScript -->
   <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.5.1/jquery.min.js"></script>
   <script src="https://stackpath.bootstrapcdn.com/bootstrap/4.5.2/js/bootstrap.min.js"></script>
@@ -45,7 +45,7 @@
   <script src="/node_modules/leaflet-control-geocoder/dist/Control.Geocoder.min.js"></script>
   <script src="/node_modules/proj4/dist/proj4.js"></script>
   <script src="/node_modules/leaflet-utfgrid/dist/leaflet.utfgrid.js"></script>
-  <script src="/node_modules/mgrs/dist/mgrs.js"></script>
+  <script src="/node_modules/mgrs/mgrs.js"></script>
   <script src="/node_modules/leaflet.gridlayer.googlemutant/dist/Leaflet.GoogleMutant.js"></script>
   <script src="/node_modules/leaflet.markercluster/dist/leaflet.markercluster.js"></script>
   <script src="/node_modules/leaflet-measure/dist/leaflet-measure.js"></script>
@@ -80,7 +80,12 @@
   <script src="/Client/js/Test/autoTest.js"></script>
   <script src="/Client/js/Test/visualizadorTests.js"></script>
   
-  <!-- El elevationHandler.js ya maneja todos los tiles -->
+  <!-- Scripts de tiles optimizados -->
+  <script src="external_tiles_adapter.js"></script>
+  <script src="github_releases_config.js"></script>
+  <script src="optimized_tiles_system.js"></script>
+  <script src="elevation_fallback_fix.js"></script>
+  
 
 </head>
 
