--- a/static/iniciarpartida.html
+++ b/static/iniciarpartida.html
@@ -15,10 +15,11 @@
     <script src="/node_modules/socket.io/client-dist/socket.io.min.js"></script>
     <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.5.1/jquery.min.js"></script>
     <script src="https://stackpath.bootstrapcdn.com/bootstrap/4.5.2/js/bootstrap.min.js"></script>
-    <script src="/Client/js/UserIdentity.js"></script>
     <script src="/Client/js/MAIRAChat.js"></script>
     <script src="/Client/js/partidas.js"></script>
     <script src="/Client/js/iniciarpartida.js"></script>
+    <!-- Parche para resolver problemas de partidas LAN -->
+    <script src="/fix_partidas_lan.js"></script>
 </head>
 
 <body>
