--- a/static/juegodeguerra.html
+++ b/static/juegodeguerra.html
@@ -54,9 +54,6 @@
   <script src="https://unpkg.com/file-saver/dist/FileSaver.js"></script>
   <script src="/Client/Libs/Leaflet.pattern-master/dist/leaflet.pattern.js"></script>
 
-  <!-- Scripts de emergencia para errores 502 -->
-  <script src="/correcciones_servidor_502.js"></script>
-  
   <!-- Scripts personalizados -->
   <script src="/Client/js/networkConfig.js" onerror="console.warn('❌ networkConfig.js falló - usando emergencia')"></script>
   <script src="/Client/js/elevation.worker.js" onerror="console.warn('❌ elevation.worker.js falló')"></script>
@@ -102,9 +99,7 @@
  <script src="/Client/js/gestorJuego.js"></script>
  
  <!-- Scripts de tiles externos y GitHub Releases -->
- <script src="external_tiles_adapter.js"></script>
- <script src="github_releases_config.js"></script>
- <script src="temporary_tiles_solution.js"></script>
+ <!-- Archivos movidos a tools/static-debug ya no necesarios en producción -->
 </head>
 <body>
   <!-- Loading container al principio del body -->
