🔗 Consistencia UserID + Migración Uvicorn
CONSISTENCIA USERIDENTITY:
✅ iniciarpartida.js: Migrado a UserIdentity centralizado
✅ gestorJuego.js: Usa UserIdentity para datos consistentes
✅ inicioGBhandler.js: UserIdentity en módulo GB
✅ UserIdentityLoader.js: Helper para carga segura
✅ HTMLs actualizados: UserIdentity cargado en todos los módulos

MIGRACIÓN UVICORN:
✅ app.py: Adaptador ASGI para Uvicorn
✅ initialize_app(): Función común para ambos servidores
✅ create_asgi_app(): Interface ASGI
✅ Mantiene compatibilidad con Flask

ARCHIVOS MODIFICADOS:
- Client/js/iniciarpartida.js (userIdLocal + UserIdentity)
- Client/js/gestorJuego.js (UserIdentity centralizado)
- Client/js/inicioGBhandler.js (consistencia GB)
- Client/js/UserIdentityLoader.js (NUEVO - helpers seguros)
- static/*.html (UserIdentity + UserIdentityLoader)
- app.py (soporte híbrido Flask/Uvicorn)

RESULTADO: ID consistente en Partidas, Juego, GB y todos los módulos

--- a/static/gestionbatalla.html
+++ b/static/gestionbatalla.html
@@ -76,6 +76,9 @@
   <script src="/Client/js/miradial.js"></script>
 
 <script src="/Client/js/networkConfig.js"></script>
+<!-- Sistema de identidad centralizado -->
+<script src="/Client/js/UserIdentity.js"></script>
+<script src="/Client/js/UserIdentityLoader.js"></script>
 <!-- Scripts modularizados para gestión de batalla -->
 <script src="/Client/js/utilsGB.js"></script>
 <script src="/Client/js/MAIRAChat.js"></script>
