--- a/static/juegodeguerra.html
+++ b/static/juegodeguerra.html
@@ -73,6 +73,10 @@
   
  <!-- 1. Primero EventEmitter -->
  <script src="/Client/js/eventemitter.js"></script>
+ 
+ <!-- 1.5. Sistema de identidad centralizado -->
+ <script src="/Client/js/UserIdentity.js"></script>
+ <script src="/Client/js/UserIdentityLoader.js"></script>
   
  <!-- 2. GestorBase que depende de EventEmitter -->
  <script src="/Client/js/gestorBase.js"></script>
