--- a/static/inicioGB.html
+++ b/static/inicioGB.html
@@ -16,6 +16,8 @@
     <script src="/node_modules/milsymbol/dist/milsymbol.js"></script>
     <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.5.1/jquery.min.js"></script>
     <script src="https://stackpath.bootstrapcdn.com/bootstrap/4.5.2/js/bootstrap.min.js"></script>
+    <script src="/Client/js/UserIdentity.js"></script>
+    <script src="/Client/js/UserIdentityLoader.js"></script>
     <script src="/Client/js/MAIRAChat.js"></script>
     <script src="/Client/js/inicioGBhandler.js"></script>
 </head>
