--- a/static/planeamiento.html
+++ b/static/planeamiento.html
@@ -25,9 +25,9 @@
   
   <script src="/Client/js/networkConfig.js"></script>
   <!-- Script de corrección de dependencias -->
-  <script src="/correccion_dependencias.js"></script>
+  <!-- <script src="/correccion_dependencias.js"></script> COMENTADO: Archivo inexistente -->
   <!-- Test específico de correcciones -->
-  <script src="/test_correcciones_especificas.js"></script>
+  <!-- <script src="/test_correcciones_especificas.js"></script> COMENTADO: Archivo inexistente -->
   <!-- Scripts JavaScript -->
   <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.5.1/jquery.min.js"></script>
   <script src="https://stackpath.bootstrapcdn.com/bootstrap/4.5.2/js/bootstrap.min.js"></script>
@@ -44,7 +44,7 @@
   <script src="/node_modules/geotiff/dist-browser/geotiff.js"></script>
   <script src="/node_modules/leaflet-control-geocoder/dist/Control.Geocoder.min.js"></script>
   <script src="/node_modules/proj4/dist/proj4.js"></script>
-  <script src="/node_modules/leaflet-utfgrid/dist/leaflet.utfgrid.js"></script>
+  <!-- <script src="/node_modules/leaflet-utfgrid/dist/leaflet.utfgrid.js"></script> COMENTADO: Dependencia faltante -->
   <script src="/node_modules/mgrs/mgrs.js"></script>
   <script src="/node_modules/leaflet.gridlayer.googlemutant/dist/Leaflet.GoogleMutant.js"></script>
   <script src="/node_modules/leaflet.markercluster/dist/leaflet.markercluster.js"></script>
