--- a/static/planeamiento.html
+++ b/static/planeamiento.html
@@ -45,7 +45,7 @@
   <script src="/node_modules/leaflet-control-geocoder/dist/Control.Geocoder.min.js"></script>
   <script src="/node_modules/proj4/dist/proj4.js"></script>
   <!-- <script src="/node_modules/leaflet-utfgrid/dist/leaflet.utfgrid.js"></script> COMENTADO: Dependencia faltante -->
-  <script src="/node_modules/mgrs/mgrs.js"></script>
+  <script src="https://unpkg.com/mgrs@1.0.0/mgrs.js"></script>
   <script src="/node_modules/leaflet.gridlayer.googlemutant/dist/Leaflet.GoogleMutant.js"></script>
   <script src="/node_modules/leaflet.markercluster/dist/leaflet.markercluster.js"></script>
   <script src="/node_modules/leaflet-measure/dist/leaflet-measure.js"></script>
