🔧 CRÍTICO: Autenticación robusta en todos los módulos
PROBLEMA RESUELTO: 'datos inválidos' y redirects en módulos

CAMBIOS PRINCIPALES:
✅ UserIdentity.js: Auto-inicialización inmediata (no espera DOM)
✅ inicioGBhandler.js: Verificación robusta con fallback a localStorage
✅ iniciarpartida.js: Sistema de verificación mejorado con logging detallado
✅ CO.js: Agregada verificación de autenticación completa
✅ planeamiento.html: Agregados scripts UserIdentity faltantes
✅ CO.html: Agregados scripts UserIdentity y networkConfig

FUNCIONALIDAD:
- Verificación de autenticación con fallback a localStorage
- Logging detallado para debug de problemas de login
- Auto-inicialización de UserIdentity compatible con todos los módulos
- Datos de usuario consistentes entre páginas

RESULTADO: Login exitoso → acceso a módulos SIN redirects

--- a/static/planeamiento.html
+++ b/static/planeamiento.html
@@ -24,6 +24,8 @@
   <link rel="stylesheet" href="/Client/css/CYGMarcha.css">
   
   <script src="/Client/js/networkConfig.js"></script>
+  <script src="/Client/js/UserIdentity.js"></script>
+  <script src="/Client/js/UserIdentityLoader.js"></script>
   <!-- Script de corrección de dependencias -->
   <!-- <script src="/correccion_dependencias.js"></script> COMENTADO: Archivo inexistente -->
   <!-- Test específico de correcciones -->
