--- a/static/CO.html
+++ b/static/CO.html
@@ -53,6 +53,11 @@
         });
     </script>
     
+    <!-- ✅ SCRIPTS DE AUTENTICACIÓN Y RED -->
+    <script src="/Client/js/networkConfig.js"></script>
+    <script src="/Client/js/UserIdentity.js"></script>
+    <script src="/Client/js/UserIdentityLoader.js"></script>
+    
     <!-- ✅ SCRIPTS CO EN ORDEN CORRECTO -->
     <script src="/Client/js/miradial.js"></script>          <!-- ✅ PRIMERO - Base para menús -->
     <script src="/Client/js/paneledicionCO.js"></script>    <!-- ✅ SEGUNDO - Panel edición -->
