🔧 MEGA FIX: Corregir múltiples problemas críticos
✅ FIXES APLICADOS:
1. obtenerDatosPartida undefined -> cargarDatosPartida()
2. userName undefined en unirse a partida -> usar UserIdentity directamente
3. Partidas 'Sin nombre' -> guardar nombre en BD y incluir en respuesta
4. Simplificar modo -> 'Partida En Línea' (más claro que Multijugador)

🎯 PROBLEMAS RESUELTOS:
- juegodeguerra.html ya no crashea por función faltante
- Unirse a partida envía userName correcto desde UserIdentity
- Crear partida guarda nombre en BD correctamente
- UI más clara: Local (turnos en misma PC) vs En Línea (red)

🧪 PENDIENTE TESTING:
- Verificar creación de partida muestra nombre correcto
- Verificar unirse a partida funciona completamente

--- a/static/iniciarpartida.html
+++ b/static/iniciarpartida.html
@@ -101,10 +101,10 @@
                     </div>
                 </div>
 
-                <!-- Modo LAN e Internet -->
+                <!-- Modo Multijugador (LAN/Internet) -->
                 <div class="card mb-4" id="modoOnline" style="display: none;">
                     <div class="card-header">
-                        Partida Online
+                        Partida Multijugador
                     </div>
                     <div class="card-body">
                         <button id="crearPartida" class="btn btn-primary btn-block mb-2">Crear Partida</button>
