Fix: MiRadial no visible y errores de JavaScript
- ✅ Agregado miradial.css a gestionbatalla.html (menú radial ahora visible)
- ✅ Función cerrarTodosPaneles definida en edicionGB.js
- ✅ Fix elementoId.split error (conversión a string)
- ✅ Inicialización de MiRadial en modo GB
- 🔄 Configuración automática window.MAIRA.modoGB = true

Errores resueltos:
1. MiRadial.mostrarMenu llamado pero menú no visible
2. ReferenceError: cerrarTodosPaneles is not defined
3. TypeError: elementoId.split is not a function
4. MiRadial no inicializado en modo GB

--- a/static/gestionbatalla.html
+++ b/static/gestionbatalla.html
@@ -24,6 +24,7 @@
   <link rel="stylesheet" href="/Client/css/planeamiento.css">
   <link rel="stylesheet" href="/Client/css/GBatalla.css">
   <link rel="stylesheet" href="/Client/css/CYGMarcha.css">
+  <link rel="stylesheet" href="/Client/css/miradial.css">
   
   <!-- Scripts JavaScript -->
   <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.5.1/jquery.min.js"></script>
