--- a/static/iniciarpartida.html
+++ b/static/iniciarpartida.html
@@ -101,10 +101,10 @@
                     </div>
                 </div>
 
-                <!-- Modo Multijugador (LAN/Internet) -->
+                <!-- Modo En Línea (LAN/Internet) -->
                 <div class="card mb-4" id="modoOnline" style="display: none;">
                     <div class="card-header">
-                        Partida Multijugador
+                        Partida En Línea
                     </div>
                     <div class="card-body">
                         <button id="crearPartida" class="btn btn-primary btn-block mb-2">Crear Partida</button>
