Fix: Terminología 'Local/Online' y prevenir redirecciones infinitas
- ✅ Cambiado 'LAN/Internet' a 'Partida Local/Partida En Línea'
- ✅ Corregida lógica cambiarModoJuego() para manejar solo 2 opciones
- ✅ Agregada validación de código de partida antes de redireccionar
- ✅ Prevenidas URLs con parámetros vacíos (iniciarpartida.html?)
- 🔍 Agregado logging adicional para debugging redirecciones

Fixes:
- URLs malformadas con ? al final
- Redirecciones infinitas en unirse a partida
- Terminología confusa LAN/Internet → Local/Online

--- a/static/iniciarpartida.html
+++ b/static/iniciarpartida.html
@@ -38,9 +38,8 @@
                     <div class="card-body">
                         <select id="modoJuego" class="form-control">
                             <option value="">Seleccione un modo</option>
-                            <option value="local">Modo Local</option>
-                            <option value="lan">Modo LAN</option>
-                            <option value="internet">Modo Internet</option>
+                            <option value="local">Partida Local</option>
+                            <option value="internet">Partida En Línea</option>
                         </select>
                     </div>
                 </div>
